--- a/report/sections/ch3-problemanalysisconclusion.tex
+++ b/report/sections/ch3-problemanalysisconclusion.tex
@@ -16,6 +16,6 @@ The reason for using the Raspberry Pi is that it can multi-task, read many senso
 	\label{fig:level3}
 \end{figure}
 
-This picture shows how the flowchart from Chapter \ref{ch:introduction} was expanded. We decided to focus on rovers, and extended the prototype requirements accordingly.
+This picture shows how the flowchart from Chapter \ref{ch:introduction} was expanded. We decided to focus on rovers, and created the prototype requirements accordingly.
 
 \clearpage
