--- a/report/citations.bib
+++ b/report/citations.bib
@@ -14,7 +14,7 @@
 @MISC{earth-explored,
 	author = {Tom Head, Mysterious Universe},
 	title = {Earth is Still an Alien Planet: 5 Habitats We Haven’t Explored},
-	month = sept,
+	month = sep,
 	year = {2014},
 	howpublished = "\url{http://mysteriousuniverse.org/2014/09/earth-is-still-an-alien-planet-5-habitats-we-havent-explored/}"
 }
@@ -151,7 +151,7 @@
 	title = {Reflectivity},
 	month = feb,
 	year = {2015},
-	howpublished = "\url{http://kb.pulsedlight3d.com/support/solutions/articles/5000554104-reflectivity}
+	howpublished = "\url{http://kb.pulsedlight3d.com/support/solutions/articles/5000554104-reflectivity}"
 }
 
 @MISC{autonomousbasic,
@@ -347,7 +347,7 @@
 
 @MISC{aaues,
 	title = {About the Department of Electronics, AAU},
-	howpublished= "\url{http://www.es.aau.dk}
+	howpublished= "\url{http://www.es.aau.dk}"
 }
 
 @MISC{Police,
@@ -369,19 +369,20 @@
 	title = {Laser-Safety},
 	month = feb,
 	year = {2015},
-	howpublished = "\url{http://kb.pulsedlight3d.com/support/solutions/articles/5000548623-laser-safety}
+	howpublished = "\url{http://kb.pulsedlight3d.com/support/solutions/articles/5000548623-laser-safety}"
 }
 
 @MISC{laserrohs,
 	title = {LIDAR Lite Product Details},
-	howpublished = "\url{https://www.sparkfun.com/products/13167}
+	howpublished = "\url{https://www.sparkfun.com/products/13167}"
 }
 
 @MISC{laserclass2,
 	title = {Laser Classification - University of Warwick},
-	month = sept,
+	month = sep,
 	year = {2011},
-	howpublished = "\url{http://www2.warwick.ac.uk/services/healthsafetywellbeing/guidance/lasers/appendix1classification/}
+	howpublished = "\url{http://www2.warwick.ac.uk/services/healthsafetywellbeing/guidance/lasers/appendix1classification/}"
+}
 
 %-------------------------------------------------------
 %development
@@ -556,14 +557,13 @@
 
 @MISC{opti_datasheet,
 	title={High-Performance Optical Mouse Sensor (ADNS-3080)},
-	howpublished="\url{http://people.ece.cornell.edu/land/courses/ece4760/FinalProjects/s2009/ncr6_wjw27/ncr6_wjw27/docs/adns_3080.pdf
-}"
+	howpublished="\url{http://people.ece.cornell.edu/land/courses/ece4760/FinalProjects/s2009/ncr6_wjw27/ncr6_wjw27/docs/adns_3080.pdf}"
 }
 
 @MISC{wiringPi-similarities,
 	author = {Gordon Henderson},
 	title = {The story of wiringPi},
 	month = may,
-	year = {2013}
+	year = {2013},
 	howpublished = "\url{https://projects.drogon.net/raspberry-pi/wiringpi/}"
 }
