--- a/report/sections/ch4-build.tex
+++ b/report/sections/ch4-build.tex
@@ -32,15 +32,15 @@ The enclosures for the ultrasonic sensors have be designed to place all of the s
 	\label{fig:ultrasonic-mounted}
 \end{figure}
 
-The design for the LIDAR-Lite laser sensor enclosure was found on the Internet, modelled by someone who is working on a project using the same laser sensors as us. The enclosure enables the sensor to rotate $360^\circ$ using 3D printed gears that are driven by a stepper motor~\cite{lidarenclosure}.
+The design for the LIDAR-Lite laser sensor enclosure was found on the Internet, modelled by someone who is working on a project using the same laser sensor as us. The enclosure enables the sensor to rotate $360^\circ$ using 3D printed gears that are driven by a stepper motor~\cite{lidarenclosure}.
 
-The enclosure design required a high-end 3D printer due to its size and print time. The prints were completed within a day, which would have taken much longer with our personal 3D printers.
+The enclosure design required a high-end 3D printer due to its size and print time. The prints were completed within a day by the university, which would have taken much longer with our personal 3D printers.
 
 \begin{figure}[H]
 	\centering
 	\begin{subfigure}[]{0.3\textwidth}
 		\includegraphics[width=\textwidth]{images/lidarcase-base.png}
-	\end{subfigure}%
+	\end{subfigure}
 	\quad
 	\begin{subfigure}[]{0.3\textwidth}
 		\includegraphics[width=\textwidth]{images/lidarcase-mount.png}
