--- a/report/sections/ch4-dcmotorcontroller.tex
+++ b/report/sections/ch4-dcmotorcontroller.tex
@@ -28,7 +28,7 @@ The advantage of this particular motor controller is the fact that it supports a
 	\label{motorcontrollertruthtabel}
 \end{table}
 
-The table above shows the possible combinations of pins to achieve different desired directions/states, where the pins must be set to high and low according to what is the direction of choice. To allow turn the rover, the A and B inputs will be flipped, so that when \textit{AOUT} goes forward, the \textit{BOUT} reverses, which results in the rover turning in its place.
+Table \ref{motorcontrollertruthtabel} shows the possible combinations of pins to achieve different desired directions/states, where the pins must be set to high and low according to what is the direction of choice. To turn the rover, the A and B inputs will be flipped, so that when \textit{AOUT} goes forward, the \textit{BOUT} reverses, which results in the rover turning in its place.
 The input pins on the motor controller also allow for control with PWM (Pulse Width Modulation), which will change the length of the duty cycle and influence the speed of which the rover is moving at\cite{DRV8833}.
 
 \begin{figure}[H]
