--- a/report/sections/ch4-slipring.tex
+++ b/report/sections/ch4-slipring.tex
@@ -1,7 +1,7 @@
 \clearpage
 \section{Slip ring}
 
-To allow the laser sensor to continuously rotate and take measurements, a slip ring was needed to avoid issues with the cables breaking or getting tangled. This results in damage to the equipment. 
+To allow the laser sensor to continuously rotate and take measurements, a slip ring was needed to avoid issues with the cables breaking or getting tangled, which would result in damage to the equipment. 
 The slip ring used for this build is a SNM022A-06\cite{slipring}, which is a 6-wire slip ring that supports up to 210DC/240AC. 
 
 \begin{figure}[H]
