--- a/report/sections/ch4-stepper.tex
+++ b/report/sections/ch4-stepper.tex
@@ -11,7 +11,7 @@ Stepper motors are usually used with a specific circuit to control them, which i
 	\label{fig:steppermotor}
 \end{figure}
 
-This diagram depicts how we connected the Pi to the stepper-motor, using a motor controller and an Arduino in the process.
+Figure \ref{fig:steppermotor} depicts how we connected the Pi to the stepper-motor, using a motor controller and an Arduino in the process.
 The only use of the Arduino in this picture is to serve as a 5V source, as we were already using the Pi to power the laser.
 
 The stepper motor we used in our project is a NEMA-17 Bipolar Stepper Motor~\cite{steppermotor}.
