--- a/report/sections/ch4-ultrasonic.tex
+++ b/report/sections/ch4-ultrasonic.tex
@@ -24,9 +24,8 @@ The trigger pin on the sensor is connected to the Raspberry Pi as an GPIO-output
 	\label{fig:voltagedividers}
 \end{figure}
 
-The circuit in the figure above has three sets of voltage dividers. Besides protecting the Raspberry Pi from the 5V, there are also other advantages of the board. Instead of using 12 pins for the three ultrasonic sensors the board reduces it to only end up using 8 pins, since the board above combines their 5V Vcc's and the ground pins into two common pins.  
-The three pins at the top of the figure labeled C are the output pins from the ultrasonic sensors, which at that time has a voltage of 5V. The pins labeled as B is where the Raspberry Pi is connected, the voltage divider has at this point reduced the voltage to the suitable 3.3V for the Raspberry Pi.  
-
+The circuit in figure \ref{fig:voltagedividers} has three sets of voltage dividers. Besides protecting the Raspberry Pi from the 5V, there are also other advantages of the board. Instead of using 12 pins for the three ultrasonic sensors the board reduces it to only end up using 8 pins, since the board above combines their 5V Vcc's and the ground pins into two common pins.  
+The three pins at the top of the figure labeled C are the output pins from the ultrasonic sensors, which at that time has a voltage of 5V. The pins labeled as B is where the Raspberry Pi is connected, the voltage divider has at this point reduced the voltage to the suitable 3.3V for the Raspberry Pi. \\ 
 The final pin labeled C is the common ground for the three voltage dividers.
 
 \begin{figure}[H]
