--- a/report/sections/ch8-perspective.tex
+++ b/report/sections/ch8-perspective.tex
@@ -4,6 +4,6 @@ The laser we built works as a proof-of-concept. Before putting the two prototype
 
 With SLAM working, it is quite simple to put the two prototypes together and get a much better proof-of-concept for our scope. Of course, with the two prototypes together, many adjustments should be made to better work together, such as the navigation system reading the map to know where it has already gone, and where it should try to map next. The rover should have multiple navigation algorithms set up for different environments and tasks. 
 
-This proof-of-concept is still only designed for 2D-mapping, and we would like to use this technology in other planets and unmapped territory on Earth. For that task, 3D-mapping is a much better fit. In order to expand our combined prototypes into a 3D capable mapper, we would need a combination of stereoscopic vision, barometric sensors, or any sort of other sensor that can give a height reading. Furthermore, our laser is mostly made for mapping of surfaces that are normal to te direction of the laser, this would not work very well on sloping hills that is found on most uninhabited places.
+This proof-of-concept is still only designed for 2D-mapping, and we would like to use this technology on other planets and unmapped territory on Earth. For that task, 3D-mapping is a much better fit. In order to expand our combined prototypes into a 3D capable mapper, we would need a combination of stereoscopic vision, barometric sensors, or any sort of other sensor that can give a height reading. Furthermore, our laser is mostly made for mapping of surfaces that are normal to the direction of the laser, this would not work very well on sloping hills that is found on most uninhabited places.
 
-Hector-slam uses landscape extracting to find reference points in a 2D scan. Using a similar system we could use a 2D spinning laser for obstacle avoidance and navigation through unknown terrain. Our prototypes takes a cheap laser module, that goes for around 600 DKK\cite{lidarl} plus the costs of the 3D printed case and stepper motor, that can give the same output, and in some cases even better in terms of range and refresh rate, as a 2700 DKK\cite{lidar360} LIDAR model. Implementation of a low cost LIDAR laser system like this combined with small and low cost control unit, like the Raspberry Pi, really opens up possibilities for 2D and 3D mapping of our surroundings and even extend that to other planets. 
+Hector-slam uses landscape extraction to find reference points in a 2D scan. Using a similar system we could use a 2D spinning laser for obstacle avoidance and navigation through unknown terrain. Our prototypes takes a cheap laser module, that goes for around 600 DKK\cite{lidarl} plus the costs of the 3D printed case and stepper motor, that can give the same output, and in some cases even better in terms of range and refresh rate, as a 2700 DKK\cite{lidar360} LIDAR model. Implementation of a low cost LIDAR laser system like this combined with small and low cost control unit, like the Raspberry Pi, really opens up possibilities for 2D and 3D mapping of our surroundings and even extend that to other planets. 
