--- a/report/sections/ch2-intro.tex
+++ b/report/sections/ch2-intro.tex
@@ -21,7 +21,7 @@ Besides exploration, the task of mapping unknown terrains is used in the event o
 \subsection{Where does this problem actually occur?}
 An unknown terrain can be defined as a terrain where no mapping has been done before.
 
-The bottom of the ocean is mostly sand, mud, and water\cite{bottom-composition}. This makes it difficult to navigate with a rover, but relatively simple with a submarine. In water, sensors that use sound, need to be calibrated to work with the correct pressure of the surroundings, which varies with the depth of the water. If the water is murky, light-based sensors may also not work, depending on the wavelength of the light they use. Light also refracts in water depending on the water density. It is possible to remote-control vehicles on the bottom of the ocean. %TODO: Based on what? Feels incomplete.
+The bottom of the ocean is mostly sand, mud, and water\cite{bottom-composition}. This makes it difficult to navigate with a rover, but relatively simple with a submarine. In water, sensors that use sound, need to be calibrated to work with the correct pressure of the surroundings, which varies with the depth of the water. If the water is murky, light-based sensors may also not work, depending on the wavelength of the light they use. Light also refracts in water depending on the water density. Since the bottom of the ocean is not very difficult to reach by cables or certain wireless signals, it is possible to remote-control vehicles that are there.
 
 Other planets can be much more complicated to navigate. The consistency of their atmosphere and terrain may be not completely known. This means that there is a higher chance of a rover being stuck on loose terrain, falling down sheer faces, and so on. It may also be the case that the planet has no atmosphere, so a drone would not be able to hover. One of the biggest issues with extraplanetary exploration is input lag. Other planets are very far away, which means that signals travelling to these distant places can take several minutes at least and years at most to reach from planet Earth. Thus automation is better suited for this task. Other planets also share the issues that the bottom of the ocean has, namely that sensors need to be calibrated to the different atmospheric levels and other characteristics of the planet.
 
