--- a/report/sections/ch4-hector.tex
+++ b/report/sections/ch4-hector.tex
@@ -38,7 +38,7 @@ Hector-slam takes the information given from the transform and laser measurement
 	\label{fig:rosflow}
 \end{figure}
 
-We made a .bag file recording of the \textbackslash scan topic on the Raspberry Pi, then the file was copied to a developer computer running Ubuntu and ROS. The bag file was played on the laptop and hector-slam with transform published, was run. The outcome was a hector map.
+We made a .bag file recording of the \textit{/scan} topic on the Raspberry Pi, then the file was copied to a developer computer running Ubuntu and ROS. The bag file was played on the laptop and hector-slam with transform published, was run. The outcome was a hector map.
 %TODO: This needs to be rephrased.
 
 \lstinputlisting[firstline=1, lastline=19, title=main.launch, language=xml]{../code/main.launch} 
