--- a/report/sections/ch4-configuring-up-mapping.tex
+++ b/report/sections/ch4-configuring-up-mapping.tex
@@ -26,7 +26,7 @@ During this stage of development, the gathering of the data happens on the Raspb
 To achieve this, we had to set up a direct connection between one of our developer computers running Ubuntu and the Raspberry Pi using a CAT5 Ethernet cable. Then we created a new network settings, set the IPv4 method to be 'Shared to other computers' which bridged the two network adapters and transmitted Internet packages to the Raspberry Pi from our own computers, connected to the Internet via Wi-Fi. Then we located the leases and found the IP address assigned to the connected device. To connect via ssh we used the following command line:
 \lstset{language=sh}
 \begin{lstlisting}
-	>> $ ssh -Y username@ip-address
+	>> \$ ssh -Y username@ip-address
 \end{lstlisting}
 This enabled us to connect to the Raspberry and by using the \textit{-Y} flag, it allowed us to stream the graphical application using X11 forwarding.
 
@@ -45,19 +45,19 @@ To reduce the amount of resources used by the Raspberry Pi, the map needs to be 
 
 To copy files to and from the Raspberry, we used the \textit{scp} utility, and therefore no version control setup was not necessary on the controller. The command line was used to transfer .bag files and source code:
 \begin{lstlisting}
-	>> $ scp username@from-ip-address:~/file /home/mylocaluser/to-location/
+	>> \$ scp username@from-ip-address:~/file /home/mylocaluser/to-location/
 \end{lstlisting}
-When the custom laser node written by us has been started, it starts publishing laser readings in form of a LaserScan message, to the \textbackslash\textit{scan} topic. By using the following command, we could listen to it and see the outcome of our scanning:
+When the custom laser node written by us has been started, it starts publishing laser readings in form of a LaserScan message, to the \textit{/scan} topic. By using the following command, we could listen to it and see the outcome of our scanning:
 
 \lstinputlisting[firstline=1, lastline=17, language=C++]{../code/sampleOutput.txt}
 
-As the output shows, the number of readings are being stored in an array that is published to \textbackslash scan and then used by ROS to visualize or transform it later on. These readings are represented in a floating-point number in meters. Range is also represented in meters, but they are hard-coded, as the minimum and maximum value of the range does not change, but rather set by the manufacturer. The messages are time-stamped, which turned out to be very important when ROS transforms them for mapping and there is also a scan time, which tells the time between the scans in seconds. The angle values are radians of the start and end angle of the scan, while the angle increment is the angular distance between measurements. Our laser does not provide intensity-data, therefore the array has been left empty.
+As the output shows, the number of readings are being stored in an array that is published to \textit{/scan} and then used by ROS to visualize or transform it later on. These readings are represented in a floating-point number in meters. Range is also represented in meters, but they are hard-coded, as the minimum and maximum value of the range does not change, but rather set by the manufacturer. The messages are time-stamped, which turned out to be very important when ROS transforms them for mapping and there is also a scan time, which tells the time between the scans in seconds. The angle values are radians of the start and end angle of the scan, while the angle increment is the angular distance between measurements. Our laser does not provide intensity-data, therefore the array has been left empty.
 
 With this, we set up everything for starting to create a map in 2D using Hector-slam.
 
 To run the code written by us, we had to place it in the ROS workspace, use the command catkin\_make to build our code into a package that ROS also understands and run the following command:
 
 \begin{lstlisting}
-	>> $ rosrun lidarlite_laser laser_scan
+	>> \$ rosrun lidarlite_laser laser_scan
 \end{lstlisting}
 In order to access the $I^2C$ interface on the Raspberry with no root privileges, we had to give the local user full permissions to \textit{/dev/i2c-1}.
