--- a/report/sections/ch4-laser.tex
+++ b/report/sections/ch4-laser.tex
@@ -27,7 +27,7 @@ Figure \ref{fig:tworeflections} shows an example of two reflections in the signa
 
 The sensor detection criteria may be selected to pick the nearer signal, the more distant signal or the strongest signal strength. Currently, we do not handle multiple reflection in our code.
 
-A reference signal is sent from the transmitter to the receiver, prior to the first distance measurement with a received pulse reflected from the target.The time delay between these two stored signals is estimated through a signal processing approach known as \textit{correlation}, which effectively provides a signature match between these two closely related signals. This accurately calculates the time delay, and is translated into distance based on the known speed-of-light, which is $\sim3.3ns\textbackslash m$\cite{howtopulse}.
+A reference signal is sent from the transmitter to the receiver, prior to the first distance measurement with a received pulse reflected from the target. The time delay between these two stored signals is estimated through a signal processing approach known as \textit{correlation}, which effectively provides a signature match between these two closely related signals. This accurately calculates the time delay, and is translated into distance based on the known speed-of-light, which is $\sim3.3ns\textbackslash m$\cite{howtopulse}.
 
 By default, the sensor runs at about 50Hz, but could vary given the signal strength and distance. To optimize the rep rate, it is possible to decrease the max-acquisition count (on register 0x02). By default, register 0x02 is 0x80 (value 128 in decimal), if you decrease this, the maximum number of acquisitions the sensor can take and use to get a reading, will decrease, too\cite{reprate}.
 
@@ -136,9 +136,9 @@ The first step is to initialize the the LIDAR-Lite laser sensor, by giving a dum
 
 Thereafter, we call the \textit{setUpPins()} function which makes the system call 3 separate calls using the GPIO utility, setting up the GPIO on the Raspberry Pi to be able to communicate with the stepper motor.
 
-The initialization of ROS happens afterwards, by calling the \textit{init} function with arguments and the name of our module. The module name is used as the node name in ROS. In the next line, ROS also starts to advertise messages to the \textbackslash\textit{scan} topic, where all the scan results are being published to.
+The initialization of ROS happens afterwards, by calling the \textit{init} function with arguments and the name of our module. The module name is used as the node name in ROS. In the next line, ROS also starts to advertise messages to the \textit{/scan} topic, where all the scan results are being published to.
 
-The rest of the code consists of two loops, one \textit{while} loop and one \textit{for} loop. The \textit{while} loop continues until the node returns anything other than an \textit{OK} status code. In here, a new LaserScan variable is being created where we ask ROS for the current time, set some hardcoded values and populate an array with the readings. The \textit{for} loop is then used to get 200 readings from the LIDAR-Lite laser using the \textit{lidar\_read(fs)} function and also rotating the stepper motor before each of the calculation using the \textit{step(num\_step)} function. The \textit{step(num\_step)} function is calling a shell script that is doing calls to the GPIO interface, making the stepper motor to take 8 micro-steps, or in other terms, one full step. Before the end of the \textit{while} loop, the message is being published to \textbackslash\textit{scan}.
+The rest of the code consists of two loops, one \textit{while} loop and one \textit{for} loop. The \textit{while} loop continues until the node returns anything other than an \textit{OK} status code. In here, a new LaserScan variable is being created where we ask ROS for the current time, set some hardcoded values and populate an array with the readings. The \textit{for} loop is then used to get 200 readings from the LIDAR-Lite laser using the \textit{lidar\_read(fs)} function and also rotating the stepper motor before each of the calculation using the \textit{step(num\_step)} function. The \textit{step(num\_step)} function is calling a shell script that is doing calls to the GPIO interface, making the stepper motor to take 8 micro-steps, or in other terms, one full step. Before the end of the \textit{while} loop, the message is being published to \textit{/scan}.
 
 \lstinputlisting[firstline=1, lastline=16, title=gpioStuff.sh, language=sh]{../code/gpioThing.sh}
 
