--- a/report/sections/ch6-discussion.tex
+++ b/report/sections/ch6-discussion.tex
@@ -19,6 +19,10 @@ The ROS installation process proved to be quite the challenge, which then lead t
 
 For the prototype, we used a CAD design we found on the Internet as a case and rotation platform for the laser. This design was good enough for a prototype, but one of the design-faults we observed was the jittering effect of the gears when rotated by a stepper motor. This forced us to do small step-based calculations using the laser, because it would not take precise microsteps, and therefore our measurements would be off. To overcome this, we needed to speed up the rotation. We had separate code for rotating the laser and reading measurements from it, running asynchronously, which made it hard to synchronize the measurements with the rotation , and therefore the maps plotted were too off. We calculated how much time it took to gather readings and tried adjusting the rotation speed accordingly, which in the end turned out to fix our issues, but the speed was too slow compared to our expectations. It took approximately 5 seconds to take a full circle
 %TODO: confirm, please
+%gustavo: so, I think this section is mixing the two versions of the laser that we had
+% one of them was async and turned at exactly 0.208333... hz (~5sec per rotation)
+% the other, current, one takes ~27s per rotation
+% I might try to fix it myself once I'm done reading through
  while gathering readings at every single step the stepper-motor took. Neither the wiringPi or lidarLite libraries, used for communicating with the laser through $I^2C$, were well optimized for the application we wanted to use them in, namely faster data acquisitions. We think this was caused because of a mixture of async- and synchronous code executed in these libraries when writing and reading through the $I^2C$ registry for acquiring new laser data. Also, the laser rotation platform was pretty well thought out, but if our resources would have allowed us, we would have designed our own to fit everything into it and to potentially design better gears.
 
 Hypothetically, if the mapping device would be mounted to the rover, which would be able to navigate areas whilst the mapping device creates a map. However, due to the low-intelligence of the rover, fast speed of movement and the slow rotation and reading of the laser, it would not be able to distinguish unknown places from known places. It would function purely by avoiding an object and thereafter determining an optimal direction away from said object, not navigating based on the map. 
