--- a/report/sections/ch2-risk-analysis.tex
+++ b/report/sections/ch2-risk-analysis.tex
@@ -13,7 +13,7 @@ Risks are considered on two different scales with 4 levels. As the legend under 
 		Going over the budget & M & VL & Carefully select the products and make sure we order the same models as specified in the excursion request form \\ \hline
 		Parts not arriving in time & L & VH & Estimate a 2 week delivery time for each package\\ \hline
 		Short-circuiting electronics during development & VL & H & Buy a new one or consider replacing it with similar hardware.\\ \hline
-		Lack of knowledge about ROS & M & H & Find and compile a list of contact persons with knowledge about it and time to support us\\ \hline
+		Lack of knowledge about software & M & H & Find and compile a list of contact persons with knowledge about it and time to support us\\ \hline
 		Compatibility issues or lack of support for hardware & L & VH & Research before ordering/selecting parts; otherwise replace \\ \hline
 		Too big of a scope and too little time to complete & H & H & Cut down on scope and write a solid argument in the discussion about it \\
 	\hline
