added some ideas

--- a/process-analysis/sections/learning-goals.tex
+++ b/process-analysis/sections/learning-goals.tex
@@ -15,3 +15,9 @@ At the start of the project and before the status seminar we discussed our perso
 
 The group had a few common learnings goals which included learning how to apply analog sensors, knowledge about 2D/3D mapping, improving group collaboration and how to use CAD software.
 \section{Discussion and Conclusion}
+
+%Inactivity before development
+
+%our scope was too big. it did not match our learning goals
+% We spent too much time delving too deep into theory and not enough investigating tools
+% Even without issues, we would not have had time to combine our prototypes
