--- a/process-analysis/sections/time-and-resources.tex
+++ b/process-analysis/sections/time-and-resources.tex
@@ -1,3 +1,5 @@
 -- Description here --
 
 \section{Discussion and Conclusion}
+
+%We kept trying to fix things after development was over, which interferred with our testing.
